--- a/requirements.txt
+++ b/requirements.txt
@@ -1,110 +1,85 @@
-anyio==2.2.0
-appnope==0.1.2
-argon2-cffi==20.1.0
-async-generator==1.10
-attrs==20.3.0
-Babel==2.9.0
-backcall==0.2.0
-backports.entry-points-selectable==1.1.0
-bleach==3.3.0
-blis==0.4.1
-catalogue==1.0.0
-certifi==2021.10.8
-cffi==1.14.5
-chardet==3.0.4
-cycler==0.11.0
-cymem==2.0.3
-decorator==4.4.2
-defusedxml==0.7.1
-distlib==0.3.2
-en-core-web-sm==2.3.1
-entrypoints==0.3
-filelock==3.0.12
-fonttools==4.28.2
-gensim==4.1.2
-idna==2.10
-importlib-metadata==2.0.0
-ipycytoscape==1.2.0
-ipykernel==5.5.0
-ipython==7.21.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-jedi==0.18.0
-Jinja2==2.11.3
-joblib==1.1.0
-json5==0.9.5
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.11
-jupyter-console==6.2.0
-jupyter-core==4.7.1
-jupyter-packaging==0.7.12
-jupyter-server==1.4.1
-jupyterlab==3.0.9
-jupyterlab-pygments==0.1.2
-jupyterlab-server==2.3.0
-jupyterlab-widgets==1.0.0
-kiwisolver==1.3.2
-MarkupSafe==1.1.1
-matplotlib==3.5.0
-mistune==0.8.4
-murmurhash==1.0.2
-nbclassic==0.2.6
-nbclient==0.5.3
-nbconvert==6.0.7
-nbformat==5.1.2
-nest-asyncio==1.5.1
-networkx==2.5
-notebook==6.2.0
-numpy==1.19.2
-packaging==20.9
-pandas==1.3.4
-pandocfilters==1.4.3
-parso==0.8.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.4.0
-plac==1.1.3
-platformdirs==2.3.0
-preshed==3.0.2
-prometheus-client==0.9.0
-prompt-toolkit==3.0.16
-ptyprocess==0.7.0
-pycparser==2.20
-Pygments==2.8.1
-pyparsing==2.4.7
-pyrsistent==0.17.3
-python-dateutil==2.8.1
-pytz==2021.1
-pyzmq==22.0.3
-qtconsole==5.0.2
-QtPy==1.9.0
-requests==2.24.0
-scikit-learn==1.0.1
-scipy==1.7.3
-seaborn==0.11.2
-Send2Trash==1.5.0
-setuptools-scm==6.3.2
-six==1.15.0
-sklearn==0.0
-smart-open==5.2.1
-sniffio==1.2.0
-spacy==2.3.2
-spectate==1.0.1
-srsly==1.0.2
-terminado==0.9.2
-testpath==0.4.4
-thinc==7.4.1
-threadpoolctl==3.0.0
-tomli==1.2.2
-tornado==6.1
-tqdm==4.50.0
-traitlets==5.0.5
-typing-extensions==3.7.4.3
-urllib3==1.25.10
-virtualenv==20.7.2
-wasabi==0.8.0
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.1
-zipp==3.2.0
+absl-py==2.1.0
+annotated-types==0.7.0
+astunparse==1.6.3
+black==24.8.0
+blis==0.7.11
+catalogue==2.0.10
+certifi==2024.7.4
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpathlib==0.18.1
+confection==0.1.5
+contourpy==1.2.1
+cycler==0.12.1
+cymem==2.0.8
+flatbuffers==24.3.25
+fonttools==4.53.1
+gast==0.6.0
+gensim==4.3.3
+google-pasta==0.2.0
+grpcio==1.65.4
+h5py==3.11.0
+idna==3.7
+Jinja2==3.1.4
+joblib==1.4.2
+keras==3.4.1
+kiwisolver==1.4.5
+langcodes==3.4.0
+language_data==1.2.0
+libclang==18.1.1
+marisa-trie==1.2.0
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.1
+mdurl==0.1.2
+ml-dtypes==0.4.0
+murmurhash==1.0.10
+mypy-extensions==1.0.0
+namex==0.0.8
+networkx==3.3
+numpy==1.26.4
+opt-einsum==3.3.0
+optree==0.12.1
+packaging==24.1
+pandas==2.2.2
+pathspec==0.12.1
+pillow==10.4.0
+platformdirs==4.2.2
+preshed==3.0.9
+protobuf==4.25.4
+pydantic==2.8.2
+pydantic_core==2.20.1
+Pygments==2.18.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+requests==2.32.3
+rich==13.7.1
+scikit-learn==1.5.1
+scipy==1.13.1
+seaborn==0.13.2
+setuptools==72.1.0
+shellingham==1.5.4
+six==1.16.0
+smart-open==7.0.4
+spacy==3.7.5
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
+tensorboard==2.17.0
+tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+termcolor==2.4.0
+thinc==8.2.5
+threadpoolctl==3.5.0
+tqdm==4.66.4
+typer==0.12.3
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+wasabi==1.1.3
+weasel==0.4.1
+Werkzeug==3.0.3
+wheel==0.43.0
+wrapt==1.16.0
